--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- styles; -->
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,300,400,600,700,800">
     <link rel="stylesheet" href="components/normalize-css/normalize.css">
     <link rel="stylesheet" href="components/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="css/main.css">
@@ -28,6 +29,19 @@
             improve your experience.
         </p>
     <![endif]-->
+
+    <aside class="menu-sidebar">
+        <a href="/" class="menu-sidebar-heading">{{ site.title }}</a>
+        <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Posts</a></li>
+            <li><a href="#">Projects</a></li>
+        </ul>
+        <ul>
+            <li><a href="#"><i class="fa fa-twitter"></i> Twitter</a></li>
+            <li><a href="#"><i class="fa fa-github"></i> GitHub</a></li>
+        </ul>
+    </aside>
 
     {{ content }}
 
