--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,14 +11,14 @@
 
     <!-- styles; -->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,300,400,600,700,800">
-    <link rel="stylesheet" href="components/normalize-css/normalize.css">
-    <link rel="stylesheet" href="components/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/components/normalize-css/normalize.css">
+    <link rel="stylesheet" href="/components/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="/css/main.css">
     <!-- end styles -->
 
     <link rel="alternate" type="application/rss+xml" href="/atom.xml" />
 
-    <script src="components/modernizr/modernizr.js"></script>
+    <script src="/components/modernizr/modernizr.js"></script>
 </head>
 <body>
 
@@ -33,24 +33,28 @@
     <aside class="menu-sidebar">
         <a href="/" class="menu-sidebar-heading">{{ site.title }}</a>
         <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Posts</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="/">Posts</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/projects">Projects</a></li>
         </ul>
         <ul>
-            <li><a href="#"><i class="fa fa-twitter"></i> Twitter</a></li>
-            <li><a href="#"><i class="fa fa-github"></i> GitHub</a></li>
+            <li><a href="https://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i> Twitter</a></li>
+            <li><a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i> GitHub</a></li>
         </ul>
     </aside>
 
-    {{ content }}
+    <div class="main-container" role="main">
+
+        {{ content }}
+
+    </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="components/jquery/jquery.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="/components/jquery/jquery.min.js"><\/script>')</script>
 
     <!-- scripts -->
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/main.js"></script>
     <!-- end scripts -->
 
     <script>
