baseline of an actual site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,18 +30,16 @@
         </p>
     <![endif]-->
 
-    <aside class="menu-sidebar">
-        <a href="/" class="menu-sidebar-heading">{{ site.title }}</a>
-        <ul>
-            <li><a href="/">Posts</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/projects">Projects</a></li>
-        </ul>
-        <ul>
-            <li><a href="https://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i> Twitter</a></li>
-            <li><a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i> GitHub</a></li>
-        </ul>
-    </aside>
+    <header class="app-banner">
+      <div class="container">
+        <p class="pull-left"><strong>Chase Hutchins</strong> Hacker, Open Sorcerer, Software Engineer</p>
+        <p class="pull-right">
+          <a href="https://www.facebook.com/syntaqx" title="Facebook"><img src="/img/ico/facebook.png" alt="Facebook"></a>
+          <a href="https://twitter.com/syntaqx" title="Twitter"><img src="/img/ico/twitter.png" alt="Twitter"></a>
+          <a href="http://www.linkedin.com/in/chasehutchins" title="LinkedIn"><img src="/img/ico/linkedin.png" alt="LinkedIn"></a>
+        </p>
+      </div>
+    </header>
 
     <div class="main-container" role="main">
 
