--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,12 @@ body {
 .container {
   margin-right: auto;
   margin-left: auto;
-  width: 1170px;
 }
 
 .site-header {
   background: #fff;
   box-shadow: 0 0 3px 0px rgba(0, 0, 0, 0.3);
+  padding: 0 20px;
   min-height: 60px;
   position: fixed;
   top: 0;
