adding google adsense baseline

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,16 @@ layout: default
       <time>{{ page.date | date: "%B %e, %Y" }}</time>
     </header>
 
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- Base Ad -->
+    <ins class="adsbygoogle"
+         style="display:inline-block;width:468px;height:60px"
+         data-ad-client="ca-pub-9560270744103927"
+         data-ad-slot="2915048099"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
     {{ content }}
 
 </article>
