--- a/css/404.css
+++ b/css/404.css
@@ -29,25 +29,11 @@ p {
   text-align:left;
 }
 
-.blink {
-  -webkit-animation-duration: .5s;
-  -webkit-animation-name: blink;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-direction: alternate;
-  -webkit-animation-timing-function: ease-in-out;
+@-webkit-keyframes blinker {
+  0% { visibility: visible; }
+  50% { visibility: hidden; }
+  100% { visibility: visible; }
 }
-
-@-webkit-keyframes blink {
-  0% {
-    opacity: 1;
-  }
-  80% {
-    opacity: 1;
-  }
-  81% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
+.blink {
+  -webkit-animation: blinker steps(1) 1s infinite;
 }
