--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,66 +1,22 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+---
+layout: compress
+---
 
-  <title>{% if page.title %}{{ page.title }} &ndash; {% endif %}{{ site.title }}</title>
-  <meta name="author" content="{{ site.name }}">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<!doctype html>
+<html lang="{{ page.lang | default: site.lang | default: 'en-US' }}" class="no-js">
+{% include head.html %}
+<body class="flex-layout layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %} {{ page.title | slugify }}">
 
-  <!-- Twitter Card Data -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@syntaqx">
-  <meta name="twitter:title" content="{% if page.title %}{{ page.title }} &ndash; {% endif %}{{ site.name }}">
-  <meta name="twitter:creator" content="@syntaqx">
-  <meta name="twitter:image" content="{{ site.url }}/img/opengraph.png">
+  {% include navigation.html %}
 
-  <!-- Open Graph Data -->
-  <meta name="og:title" content="{{ page.title }}">
-  <meta name="og:type" content="article">
-  <meta name="og:url" content="{{ site.url }}{{ page.url }}">
-  <meta name="og:image" content="{{ site.url }}/img/opengraph.png">
-  <meta name="og:site_name" content="{{ site.name }}">
-  <meta name="fb:admins" content="1219924231">
-
-  <!-- styles -->
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/css/main.css?{{ site.time | date: "%Y%m%d%g%m%s" }}">
-  <!-- end styles -->
-</head>
-<body>
-
-  <header class="site-header" role="banner">
-    <div class="container">
-      <a href="/" class="site-brand">
-        <i class="fa fa-terminal"></i> syntaqx
-      </a>
-      <ul class="site-header-nav">
-        <li><a href="https://twitter.com/syntaqx"><i class="fa fa-twitter"></i> Twitter</a></li>
-        <li><a href="https://www.facebook.com/syntaqx"><i class="fa fa-facebook"></i> Facebook</a></li>
-        <li><a href="https://github.com/syntaqx"><i class="fa fa-github"></i> GitHub</a></li>
-        <li><a href="http://careers.stackoverflow.com/syntaqx"><i class="fa fa-pencil-square"></i> Resume</a></li>
-        <li><a href="mailto:syntaqx@gmail.com"><i class="fa fa-envelope"></i> Contact Me</a></li>
-      </ul>
-    </div>
-  </header>
-
-  <div class="main-container" role="main">
+  <div class="flex-content">
 
     {{ content }}
 
   </div>
 
-  <script>
-  (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-  function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-  e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-  e.src='//www.google-analytics.com/analytics.js';
-  r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-  ga('create','UA-48212212-1');ga('send','pageview');
-  </script>
+  {% include footer.html %}
+  {% include scripts.html %}
 
 </body>
 </html>
