--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,4 +2,12 @@
 layout: default
 ---
 
-{{ content }}
+{% include page-intro.html %}
+
+<main id="main" class="container" aria-label="Content">
+  <article>
+    <div>
+      {{ content }}
+    </div>
+  </article>
+</main>
