--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,12 @@
 layout: default
 ---
 
-<article class="post-item">
-  <header class="post-item-header">
-    <time class="post-date">{{ page.date | date: "%B %e, %Y" }}</time>
-    <h2 class="post-title"><a href="{{ page.url }}">{{ page.title }}</a></h2>
-  </header>
-  <section class="post-item-content">
+{% include page-intro.html %}
 
-    {{ content }}
-
-  </section>
-</article>
+<main id="main" class="container" aria-label="Content">
+  <article>
+    <div>
+      {{ content }}
+    </div>
+  </article>
+</main>
