--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -3,7 +3,7 @@
   <ul class="pagination">
 
     {% if paginator.previous_page %}
-      <li class="page-item"><a class="page-link" href="{{ paginator.previous_page_path }}">&laquo;</a></li>
+      <li class="page-item"><a class="page-link" href="{{ site.basurl }}{{ paginator.previous_page_path }}">&laquo;</a></li>
     {% else %}
       <li class="page-item disabled"><a class="page-link" href="#">&laquo;</a></li>
     {% endif %}
@@ -13,14 +13,14 @@
       {% if page == paginator.page %}
         <li class="page-item disabled"><a class="page-link" href="#">{{ page }}</a></li>
       {% elsif page == 1 %}
-        <li class="page-item"><a class="page-link" href="{{ site.paginate_path | replace: '//', '/' | replace: ':num', '' }}">{{ page }}</a></li>
+        <li class="page-item"><a class="page-link" href="{{ site.baseurl }}{{ site.paginate_path | replace: '//', '/' | replace: ':num', '' }}">{{ page }}</a></li>
       {% else %}
-        <li class="page-item"><a class="page-link" href="{{ site.paginate_path | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a></li>
+        <li class="page-item"><a class="page-link" href="{{ site.baseurl }}{{ site.paginate_path | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a></li>
       {% endif %}
     {% endfor %}
 
     {% if paginator.next_page %}
-      <li class="page-item"><a class="page-link" href="{{ paginator.next_page_path }}">&raquo;</a></li>
+      <li class="page-item"><a class="page-link" href="{{ site.baseurl }}{{ paginator.next_page_path }}">&raquo;</a></li>
     {% else %}
       <li class="page-item disabled"><a class="page-link" href="#">&raquo;</a></li>
     {% endif %}
