--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,7 @@
   <!-- stylesheets -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <link rel="stylesheet" href="{{ "rogue/github.css" | prepend: "assets/css/" | absolute_url }}">
   <link rel="stylesheet" href="{{ "ie10-viewport-bug-workaround.css" | prepend: "assets/css/" | absolute_url }}">
   <link rel="stylesheet" href="{{ "main.css" | prepend: "assets/css/" | absolute_url }}">
 
