--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,25 +1,49 @@
 {% if paginator.total_pages > 1 %}
-<div class="pagination">
+<nav aria-label="Blog pagination">
+  <ul class="pagination justify-content-center">
+
   {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
+    <li class="page-item">
+      <a class="page-link" href="{{ paginator.previous_page_path | replace: '//', '/' }}">
+        <span aria-hidden="true">&laquo;</span>
+        <span>{{ site.data.messages.locales[site.locale].pagination.previous }}</span>
+      </a>
+    </li>
   {% else %}
-    <span>&laquo; Prev</span>
+    <li class="page-item disabled">
+      <a class="page-link" href="#">
+        <span aria-hidden="true">&laquo;</span>
+        <span>{{ site.data.messages.locales[site.locale].pagination.previous }}</span>
+      </a>
+    </li>
   {% endif %}
 
   {% for page in (1..paginator.total_pages) %}
     {% if page == paginator.page %}
-      <em>{{ page }}</em>
+      <li class="page-item active"><a class="page-link" href="#">{{ page }}</a></li>
     {% elsif page == 1 %}
-      <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a>
+      <li class="page-item"><a class="page-link" href="{{ paginator.previous_page_path | replace: '//', '/' }}">{{ page }}</a></li>
     {% else %}
-      <a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
+      <li class="page-item"><a class="page-link" href="{{ site.paginate_path | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a></li>
     {% endif %}
   {% endfor %}
 
   {% if paginator.next_page %}
-    <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a>
+    <li class="page-item">
+      <a class="page-link" href="{{ paginator.next_page_path | replace: '//', '/' }}">
+        <span>{{ site.data.messages.locales[site.locale].pagination.next }}</span>
+        <span aria-hidden="true">&raquo;</span>
+      </a>
+    </li>
   {% else %}
-    <span>Next &raquo;</span>
+    <li class="page-item disabled">
+      <a class="page-link" href="#">
+        <span>{{ site.data.messages.locales[site.locale].pagination.next }}</span>
+        <span aria-hidden="true">&raquo;</span>
+      </a>
+    </li>
   {% endif %}
-</div>
+
+  </ul>
+</nav>
 {% endif %}
