--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,11 +6,14 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <p>&copy; {{ site.time | date: '%Y' }} {{ copyright }}</p>
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <span class="text-muted">&copy; {{ site.time | date: '%Y' }} {{ copyright }}</span>
+          </li>
+        </ul>
       </div>
       <div class="col">
         <ul class="list-inline text-right">
-          <li class="list-inline-item"><a href="{{ "/sitemap/" | absolute_url }}">Sitemap</a></li>
           {% for item in site.data.navigation.legal %}
           <li class="list-inline-item"><a href="{{ item.url | absolute_url }}">{{ item.title }}</a></li>
           {% endfor %}
