--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,28 +14,23 @@
   {% else %}
     <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
     <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
-    <link rel="canonical" href="{{ page.url | replace:'index.html', '' | absolute_url }}">
+    <link rel="canonical" href="{{ page.url | replace: 'index.html', '' | absolute_url }}">
   {% endif %}
 
   <!-- stylesheets -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-  <link rel="stylesheet" href="{{ "rogue/github.css" | prepend: "assets/css/" | absolute_url }}">
-  <link rel="stylesheet" href="{{ "ie10-viewport-bug-workaround.css" | prepend: "assets/css/" | absolute_url }}">
-  <link rel="stylesheet" href="{{ "main.css" | prepend: "assets/css/" | absolute_url }}">
-
-  <script>
-    {% include assets/js/cut-the-mustard.js %}
-    {% include assets/js/enhance.js %}
-  </script>
+  <link rel="stylesheet" href="{{ "rogue/github.css" | prepend: "/assets/css/" | absolute_url }}">
+  <link rel="stylesheet" href="{{ "ie10-viewport-bug-workaround.css" | prepend: "/assets/css/" | absolute_url }}">
+  <link rel="stylesheet" href="{{ "main.css" | prepend: "/assets/css/" | absolute_url }}">
 
   {% if site.pingback_url %}
-    <link rel="pingback" href="{{ site.pingback_url }}">
+    <link rel="pingback" href="{{ site.pingback_url | absolute_url }}">
   {% endif %}
 
   <!-- seo -->
   {% if site.plugins contains 'jekyll-sitemap' %}
-    <link rel="sitemap" type="application/xml" title="Sitemap" href="{{ 'sitemap.xml' | relative_url }}">
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="{{ 'sitemap.xml' | absolute_url }}">
   {% endif %}
 
   {% if site.plugins contains 'jekyll-feed' %}
@@ -43,4 +38,5 @@
   {% endif %}
 
   {% include social.html %}
+  {% include open-graph.html %}
 </head>
