--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -5,19 +5,18 @@
   {% if paginator.previous_page %}
     <li class="page-item">
       <a class="page-link" href="{{ paginator.previous_page_path | replace: '//', '/' }}">
-        <span aria-hidden="true">&laquo;</span>
-        <span>{{ site.data.messages.locales[site.locale].pagination.previous }}</span>
+        <span>Older Posts</span>
       </a>
     </li>
   {% else %}
     <li class="page-item disabled">
       <a class="page-link" href="#">
-        <span aria-hidden="true">&laquo;</span>
-        <span>{{ site.data.messages.locales[site.locale].pagination.previous }}</span>
+        <span>Older Posts</span>
       </a>
     </li>
   {% endif %}
 
+  {% comment %}
   {% for page in (1..paginator.total_pages) %}
     {% if page == paginator.page %}
       <li class="page-item active"><a class="page-link" href="#">{{ page }}</a></li>
@@ -27,19 +26,18 @@
       <li class="page-item"><a class="page-link" href="{{ site.paginate_path | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a></li>
     {% endif %}
   {% endfor %}
+  {% endcomment %}
 
   {% if paginator.next_page %}
     <li class="page-item">
       <a class="page-link" href="{{ paginator.next_page_path | replace: '//', '/' }}">
-        <span>{{ site.data.messages.locales[site.locale].pagination.next }}</span>
-        <span aria-hidden="true">&raquo;</span>
+        <span>Newer Posts</span>
       </a>
     </li>
   {% else %}
     <li class="page-item disabled">
       <a class="page-link" href="#">
-        <span>{{ site.data.messages.locales[site.locale].pagination.next }}</span>
-        <span aria-hidden="true">&raquo;</span>
+        <span>Newer Posts</span>
       </a>
     </li>
   {% endif %}
