--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,8 +2,31 @@
 layout: default
 ---
 
-<div class="container">
+<main id="main" class="container" aria-label="Content">
 
-  {{ content }}
+  <div class="jumbotron text-center">
+    <h1>Under construction</h1>
+  </div>
 
-</div>
+<!--   <section class="section feature-box">
+    <h1 class="section-heading pt-4">Why is it so great?</h1>
+    <p class="section-description lead grey-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+    <div class="row features-big">
+      <div class="col-md-4 mb-r">
+        <i class="fa fa-area-chart red-text"></i>
+        <h5 class="feature-title">Analytics</h5>
+        <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
+      </div>
+      <div class="col-md-4 mb-r">
+        <i class="fa fa-book cyan-text"></i>
+        <h5 class="feature-title">Tutorials</h5>
+        <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
+      </div>
+      <div class="col-md-4 mb-r">
+        <i class="fa fa-coffee orange-text"></i>
+        <h5 class="feature-title">Relax</h5>
+        <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
+      </div>
+    </div>
+  </section>
+ --></main>
