--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,11 +2,19 @@
 layout: default
 ---
 
-{% include page-intro.html %}
+<!-- Page Header -->
+<header class="jumbotron">
+  <div class="container">
+    <div class="page-heading text-center">
+      <h1>{{ page.title | escape }}</h1>
+      {% if page.tagline %}<span class="lead">{{ page.tagline | escape }}</span>{% endif %}
+    </div>
+  </div>
+</header>
 
 <main id="main" class="container" aria-label="Content">
   <article>
-    <div>
+    <div class="page-content">
       {{ content }}
     </div>
   </article>
