--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,11 +2,27 @@
 layout: default
 ---
 
-{% include page-intro.html %}
+{% assign author = page.author | default: page.authors[0] | default: site.author %}
+{% assign author = site.data.authors[author] %}
 
 <main id="main" class="container" aria-label="Content">
-  <article>
-    <div>
+  <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+    <header class="post-header">
+      <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
+      <ul class="post-meta">
+        <li class="post-meta-item"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: site.date_format }}</time></li>
+        {% if author %}
+        <li class="post-meta-item">
+          <span itemprop="author" itemscope itemtype="http://schema.org/Person">
+            <span itemprop="name">
+              <a href="{{ author.url }}" rel="author">{{ author.name }}</a>
+            </span>
+          </span>
+        </li>
+        {% endif %}
+      </ul>
+    </header>
+    <div class="post-content" itemprop="articleBody">
       {{ content }}
     </div>
   </article>
