--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,7 @@ a:focus {
 }
 
 .flex-content {
+  padding: 56px 0 50px;
   flex: 1;
 }
 
@@ -25,12 +26,59 @@ a:focus {
   padding: 15px;
 }
 
+.search-results-list ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.post-meta {
+  padding: 0;
+  list-style: none;
+}
+
+.post-meta-item {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  color: #868e96;
+}
+
+.post-meta-item:not(:last-child) {
+  margin-right: 5px;
+}
+
+
+.search-results-list li {
+  border-bottom: 1px solid #eee;
+  margin: 0 0 1.5rem;
+  padding: 0 0 1.5rem;
+}
+
+.search-results-list li:hover {
+  background-color: #f1f3f5;
+  border-color: transparent;
+  border-radius: 10px;
+}
+
+.search-result-url {
+  margin-bottom: 0.25rem;
+  font-size: 80%;
+}
+
+.search-result-excerpt {
+  margin-bottom: 0;
+}
+
+.article-feeds {
+  text-align: center;
+}
+
 .main-footer {
   background: #f2f2f2;
   padding: 24px 0;
 }
 
-.main-footer p,
-.main-footer ul {
+.main-footer .list-inline {
   margin-bottom: 0;
 }
