further improvements, and starting on the s3 builder

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,9 @@ layout: default
           </span>
         </li>
         {% endif %}
+        <li class="post-meta-item">
+          {% include reading-time.html %}
+        </li>
       </ul>
     </header>
     <div class="post-content" itemprop="articleBody">
