--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,4 +5,6 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha384-xBuQ/xzmlsLoJpyjoggmTEz8OWUFM0/RC5BsqQBDX2v5cMvDHcMakNTNrHIW2I5f" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.6.1/jquery.timeago.min.js" integrity="sha384-2inFZ94qh1Esdr8qXMspFwIpFT1m9RAXWGgQCMgnRYAo7tDfOOip0uyue2LvfQ33" crossorigin="anonymous"></script>
 <script src="{{ "ie10-viewport-bug-workaround.js" | prepend: "/assets/js/" | absolute_url }}"></script>
+<script src="{{ "main.js" | prepend: "/assets/js/" | absolute_url }}"></script>
