--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,11 @@ layout: compress
   {% include skip-links.html %}
   {% include navigation.html %}
 
-  <div class="flex-content">
+  <main id="main" class="flex-content" aria-label="Content">
 
     {{ content }}
 
-  </div>
+  </main>
 
   {% include footer.html %}
   {% include scripts.html %}
