--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,31 +2,25 @@
 layout: default
 ---
 
-<main id="main" class="container" aria-label="Content">
-
-  <div class="jumbotron text-center">
-    <h1>Under construction</h1>
-  </div>
-
-<!--   <section class="section feature-box">
-    <h1 class="section-heading pt-4">Why is it so great?</h1>
-    <p class="section-description lead grey-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-    <div class="row features-big">
-      <div class="col-md-4 mb-r">
-        <i class="fa fa-area-chart red-text"></i>
-        <h5 class="feature-title">Analytics</h5>
-        <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
-      </div>
-      <div class="col-md-4 mb-r">
-        <i class="fa fa-book cyan-text"></i>
-        <h5 class="feature-title">Tutorials</h5>
-        <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
-      </div>
-      <div class="col-md-4 mb-r">
-        <i class="fa fa-coffee orange-text"></i>
-        <h5 class="feature-title">Relax</h5>
-        <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="mt-5 text-center">
+        <h1>Oops!</h1>
+        <p class="lead">Looks like you've caught me building my site live! Feel free to poke around, but realize things are a work-in-progress.</p>
+        <p>I'm hoping to have things all wrapped up soon, and then you should expect to see more content coming!</p>
       </div>
     </div>
-  </section>
- --></main>
+    <div class="col">
+      <svg class="svg-box" width="380px" height="500px" viewBox="0 0 837 1045" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+          <path d="M353,9 L626.664028,170 L626.664028,487 L353,642 L79.3359724,487 L79.3359724,170 L353,9 Z" id="Polygon-1" stroke="#3bafda" stroke-width="6" sketch:type="MSShapeGroup"></path>
+          <path d="M78.5,529 L147,569.186414 L147,648.311216 L78.5,687 L10,648.311216 L10,569.186414 L78.5,529 Z" id="Polygon-2" stroke="#7266ba" stroke-width="6" sketch:type="MSShapeGroup"></path>
+          <path d="M773,186 L827,217.538705 L827,279.636651 L773,310 L719,279.636651 L719,217.538705 L773,186 Z" id="Polygon-3" stroke="#f76397" stroke-width="6" sketch:type="MSShapeGroup"></path>
+          <path d="M639,529 L773,607.846761 L773,763.091627 L639,839 L505,763.091627 L505,607.846761 L639,529 Z" id="Polygon-4" stroke="#00b19d" stroke-width="6" sketch:type="MSShapeGroup"></path>
+          <path d="M281,801 L383,861.025276 L383,979.21169 L281,1037 L179,979.21169 L179,861.025276 L281,801 Z" id="Polygon-5" stroke="#ffaa00" stroke-width="6" sketch:type="MSShapeGroup"></path>
+        </g>
+      </svg>
+    </div>
+  </div>
+</div>
