--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <header>
-  <nav id="navbar-primary" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" itemscope itemtype="http://schema.org/SiteNavigationElement" aria-label="Main navigation">
+  <nav id="navbar-primary" class="navbar navbar-expand-lg navbar-light fixed-top" itemscope itemtype="http://schema.org/SiteNavigationElement" aria-label="Main navigation">
     <div class="container">
       <a class="navbar-brand" href="{% link index.html %}">
         {{ site.title }}
