--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,12 +5,14 @@ layout: default
 {% assign author = page.author | default: page.authors[0] | default: site.author %}
 {% assign author = site.data.authors[author] %}
 
-<main id="main" class="container" aria-label="Content">
+<div class="container">
   <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
     <header class="post-header">
       <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
       <ul class="post-meta">
-        <li class="post-meta-item"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: site.date_format }}</time></li>
+        <li class="post-meta-item">
+          <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: site.date_format }}</time>
+        </li>
         {% if author %}
         <li class="post-meta-item">
           <span itemprop="author" itemscope itemtype="http://schema.org/Person">
@@ -29,4 +31,4 @@ layout: default
       {{ content }}
     </div>
   </article>
-</main>
+</div>
