--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<main id="main" class="container" aria-label="Content">
+<div class="container">
   <div class="row justify-content-center">
     <div class="col-9">
       {{ content }}
     </div>
   </div>
-</main>
+</div>
