--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<header class="jumbotron jumbotron-fluid">
+<header class="page-hero">
   <div class="container">
-    <div class="page-heading text-center">
+    <div class="page-hero-text">
       <h1>{{ page.title | escape }}</h1>
       {% if page.tagline %}<span class="lead">{{ page.tagline | escape }}</span>{% endif %}
     </div>
