--- a/_includes/reading-time.html
+++ b/_includes/reading-time.html
@@ -1,9 +1,6 @@
 {% capture words %}
   {{ page.content | number_of_words | minus: 250 }}
 {% endcapture %}
-{% unless words contains "-" %}
-  {% assign read_time = words | plus: 250 | divided_by: 180 | append: " minute read" %}
-{% endunless %}
-{% if read_time %}
-  <span class="reading-time" title="{{ read_time }}">{{ read_time }}</span>
-{% endif %}
+{% if words contains "-" %}{% assign words = 1 %}{% endif %}
+{% assign read_time = words | plus: 250 | divided_by: 180 | default: "Less than a" | append: " minute read" %}
+<span class="reading-time" title="{{ read_time }}">{{ read_time }}</span>
