--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,12 @@ layout: compress
 
   <main id="main" class="flex-content" aria-label="Content">
 
+    <div class="alert alert-warning mb-0" role="alert">
+      <div class="container">
+        <strong>Whoops!</strong> Looks like you've caught me right in the middle of updating my site! Feel free to browse, but things will either be placeholders or broken.
+      </div>
+    </div>
+
     {{ content }}
 
   </main>
