--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,6 +25,28 @@
   padding: 15px;
 }
 
+/* Pages */
+
+.page-hero {
+  background: #1a1a1a;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  margin-bottom: 5rem;
+}
+
+.page-hero-text {
+  text-align: center;
+  color: #fff;
+}
+
+/* Post List */
+.post-list {
+}
+
+.post-list-item {
+  margin-bottom: 5rem;
+}
+
 /* Post */
 
 .post {
@@ -116,14 +138,10 @@
 /* Footer */
 
 .footer {
-  background: #29292c;
-  padding: 24px 0;
+  padding: 5rem 0;
+  text-align: center;
 }
 
-.footer a {
-  color: #9b9aa1;
-}
-
-.footer .list-inline {
-  margin-bottom: 0;
+.footer p {
+  margin: 0;
 }
