--- a/_layouts/scratch.html
+++ b/_layouts/scratch.html
@@ -7,6 +7,23 @@ layout: compress
 {% include head.html %}
 <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
 
+  <style>
+
+    body {
+      background-color: #f9f9f9;
+      text-align: center;
+    }
+
+    .not-found,
+    .license {
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    </style>
+
   {% include skip-links.html %}
 
   <main id="main" aria-label="Content">
