trying to fix the text flying blind

--- a/_layouts/scratch.html
+++ b/_layouts/scratch.html
@@ -17,9 +17,15 @@ layout: compress
     .not-found,
     .license {
       height: 100vh;
+      max-width: 800px;
       display: flex;
       align-items: center;
       justify-content: center;
+    }
+
+    .license-body {
+      margin: 0 auto;
+      text-align: left;
     }
 
     </style>
