put things into an update state

--- a/_layouts/baseof.html
+++ b/_layouts/baseof.html
@@ -1,9 +1,9 @@
 ---
-layout: nil
+layout: null
 ---
 
 <!doctype html>
-<html lang="{{ site.locale | slice: 0,2 | default: "en" }}">
+<html lang="{{ site.locale | slice: 0,2 | default: 'en' }}">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
