--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@ layout: baseof
       </div>
       <div class="col">
         <ul class="list-inline text-right">
-          <li class="list-inline-item"><a href="#">Status</a></li>
+          <li class="list-inline-item"></li>
         </ul>
       </div>
     </div>
