playing around with builder

--- a/themes/hugo-PaperMod/layouts/partials/footer.html
+++ b/themes/hugo-PaperMod/layouts/partials/footer.html
@@ -9,6 +9,8 @@
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
         <a href="https://git.io/hugopapermod" rel="noopener" target="_blank">PaperMod</a>
     </span>
+    <br>
+    <em>Any and all opinions listed here are my own and not representative of my employers; future, past and present.</em>
 </footer>
 
 {{- if (not .Site.Params.disableScrollToTop) }}
