--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -55,3 +55,13 @@ a:hover {
 footer {
   border-top-color: var(--bordercl)
 }
+
+/* .gist {
+  max-width:350px;
+  overflow:auto;
+} */
+
+.gist .blob-wrapper.data {
+  max-height:300px;
+  overflow:auto;
+}
